Commit in non-working state.