@@ -43,7 +43,6 @@
       <arquillian.version>1.0.0.Alpha4</arquillian.version>
 -->
         <arquillian.version>1.0.0-SNAPSHOT</arquillian.version>
-
     </properties>
 
 
@@ -79,11 +78,19 @@
           <scope>test</scope>
         </dependency>
 
-         <dependency>
+    </dependencies>
+
+
+<profiles>
+
+<profile>
+    <id>jbossas-remote-6</id>
+    <dependencies>
+        <dependency>
             <groupId>org.jboss.arquillian.container</groupId>
             <artifactId>arquillian-jbossas-remote-6</artifactId>
             <version>${arquillian.version}</version>
-         </dependency>
+        </dependency>
         <dependency>
             <groupId>org.jboss.jbossas</groupId>
             <artifactId>jboss-as-client</artifactId>
@@ -91,7 +98,65 @@
             <type>pom</type>
         </dependency>
     </dependencies>
+</profile>
 
+
+
+<profile>
+    <id>jbossas-embedded-6</id>
+    <dependencies>
+        <dependency>
+            <groupId>org.jboss.arquillian.container</groupId>
+            <artifactId>arquillian-jbossas-embedded-6</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.jbossas</groupId>
+            <artifactId>jboss-as-depchain</artifactId>
+            <version>6.0.0.20100721-M4</version>
+            <type>pom</type>
+        </dependency>
+    </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.jboss.jbossas</groupId>
+                <artifactId>jboss-as-depchain</artifactId>
+                <version>6.0.0.20100721-M4</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <additionalClasspathElements>
+                        <additionalClasspathElement>${env.JBOSS_HOME}/client/jbossws-native-client.jar</additionalClasspathElement>
+                        <!--
+                            Because jbossweb.sar contains shared web.xml, which must be
+                            visible from same CL as TomcatDeployer.class.getClassLoader
+                        -->
+                        <additionalClasspathElement>${env.JBOSS_HOME}/server/default/deploy/jbossweb.sar</additionalClasspathElement>
+                    </additionalClasspathElements>
+                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                    <trimStackTrace>false</trimStackTrace>
+                    <printSummary>true</printSummary>
+                    <forkMode>once</forkMode>
+                    <!--
+                        MaxPermSize Required to bump the space for relective data like
+                        classes, methods, etc. EMB-41. Endorsed required for things like
+                        WS support (EMB-61)
+                    -->
+                    <argLine>-Xmx512m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true -Djava.util.logging.manager=org.jboss.logmanager.LogManager -Djava.endorsed.dirs=${env.JBOSS_HOME}/lib/endorsed -Djboss.home=${env.JBOSS_HOME} -Djboss.boot.server.log.dir=${env.JBOSS_HOME}</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+</profile>
+</profiles>
     <repositories>
         <repository>
             <id>codehaus.m2.snapshots</id>
